<resources>

    <string name="app_name">Gauzy</string>
    <string name="login_button_label">Microsoft</string>
    <string name="login_button_label_description">Microsoft logo</string>
    <string name="login_subtitle">Califica tus materias</string>
    <string name="login_instruction">Inicia sesión con tu cuenta institucional</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>